// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultBanner Should render correct banner type 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "correctBannerBackground": "#b8f28b",
        "correctBannerText": "#58a700",
        "darkBlue": "#1cb0f6",
        "darkGray": "#e5e5e5",
        "incorrectBannerBackground": "#ffc1c1",
        "incorrectBannerText": "#ea2b2b",
        "lightBlue": "#ddf4ff",
        "lightGray": "#f7f7f7",
        "slate": "#323c41",
        "undecidedBannerBackground": "#f5f5f5",
        "white": "#ffffff",
      },
    }
  }
>
  <styled.div
    bannerType="correct"
  >
    <styled.div>
      <ForwardRef(SvgTick) />
    </styled.div>
    <styled.div>
      <styled.h2>
        You are correct!
      </styled.h2>
      <styled.span>
        Well done keep going!
      </styled.span>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`ResultBanner Should render incorrect banner type 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "correctBannerBackground": "#b8f28b",
        "correctBannerText": "#58a700",
        "darkBlue": "#1cb0f6",
        "darkGray": "#e5e5e5",
        "incorrectBannerBackground": "#ffc1c1",
        "incorrectBannerText": "#ea2b2b",
        "lightBlue": "#ddf4ff",
        "lightGray": "#f7f7f7",
        "slate": "#323c41",
        "undecidedBannerBackground": "#f5f5f5",
        "white": "#ffffff",
      },
    }
  }
>
  <styled.div
    bannerType="incorrect"
  >
    <styled.div>
      <ForwardRef(SvgCross) />
    </styled.div>
    <styled.div>
      <styled.h2>
        Correct Solution:
      </styled.h2>
      <styled.span>
        En el tren.
      </styled.span>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`ResultBanner Should render undecided banner type 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "correctBannerBackground": "#b8f28b",
        "correctBannerText": "#58a700",
        "darkBlue": "#1cb0f6",
        "darkGray": "#e5e5e5",
        "incorrectBannerBackground": "#ffc1c1",
        "incorrectBannerText": "#ea2b2b",
        "lightBlue": "#ddf4ff",
        "lightGray": "#f7f7f7",
        "slate": "#323c41",
        "undecidedBannerBackground": "#f5f5f5",
        "white": "#ffffff",
      },
    }
  }
>
  <styled.div
    bannerType="undecided"
  >
    <styled.button
      isActive={false}
    >
      Check Answer
    </styled.button>
  </styled.div>
</ThemeProvider>
`;
